[gd_scene load_steps=12 format=3 uid="uid://csn7d5hfqsns3"]

[ext_resource type="Script" path="res://Scripts/title_screen.gd" id="1_x80pa"]
[ext_resource type="Texture2D" uid="uid://ctva0a2ukw6ui" path="res://Images/hud/TQlogo.png" id="2_2p2a5"]
[ext_resource type="StyleBox" uid="uid://bq2c63fexm4mw" path="res://Styles/WAXButton.tres" id="3_wtpa1"]
[ext_resource type="StyleBox" uid="uid://cpwuxfiiuaa2l" path="res://Styles/WAXButtonHover.tres" id="4_jf74b"]
[ext_resource type="Texture2D" uid="uid://b5sdntf24w2j8" path="res://Images/hud/background-1.png" id="5_6fyab"]
[ext_resource type="Texture2D" uid="uid://c0gujlp4gb178" path="res://Images/assets_and_levels/level-1.png" id="6_8qk1v"]
[ext_resource type="Texture2D" uid="uid://cp48nfka6d1lm" path="res://Images/assets_and_levels/level-2.png" id="7_u8qna"]
[ext_resource type="Texture2D" uid="uid://c4lu74vrl015n" path="res://Images/assets_and_levels/level-3.png" id="8_f05d6"]
[ext_resource type="Texture2D" uid="uid://d7asrw5bvteg" path="res://Images/reptilian/reptilian_still_image_front.png" id="9_888ej"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_571n0"]
bg_color = Color(0.188235, 0.505882, 0.580392, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3q6i3"]
bg_color = Color(0.188235, 0.505882, 0.580392, 1)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_x80pa")

[node name="TQlogo" type="Sprite2D" parent="."]
position = Vector2(320, 150)
scale = Vector2(1.846, 1.784)
texture = ExtResource("2_2p2a5")

[node name="WaxLogin" type="Button" parent="."]
visible = false
offset_left = 236.0
offset_top = 344.0
offset_right = 416.0
offset_bottom = 406.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
theme_override_styles/pressed = ExtResource("3_wtpa1")
theme_override_styles/focus = ExtResource("3_wtpa1")
text = "WAX Login"

[node name="Background-1" type="Sprite2D" parent="."]
z_index = -4
position = Vector2(319.88, 241.324)
scale = Vector2(0.458, 0.458)
texture = ExtResource("5_6fyab")

[node name="Level-1" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(321, 241.5)
scale = Vector2(0.458, 0.624)
texture = ExtResource("6_8qk1v")

[node name="Level-2" type="Sprite2D" parent="."]
z_index = -2
position = Vector2(322, 242)
scale = Vector2(0.534, 0.852)
texture = ExtResource("7_u8qna")

[node name="Level-3" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(320, 242)
scale = Vector2(0.46, 1.088)
texture = ExtResource("8_f05d6")

[node name="Play" type="Button" parent="."]
visible = false
offset_left = 252.0
offset_top = 402.0
offset_right = 414.0
offset_bottom = 448.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
text = "Play"

[node name="Login" type="Button" parent="."]
offset_left = 100.0
offset_top = 398.0
offset_right = 246.0
offset_bottom = 444.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
theme_override_styles/pressed = ExtResource("3_wtpa1")
text = "Login"

[node name="Register" type="Button" parent="."]
offset_left = 410.0
offset_top = 398.0
offset_right = 556.0
offset_bottom = 444.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
theme_override_styles/pressed = ExtResource("3_wtpa1")
text = "Register"

[node name="RegisterPanel" type="Panel" parent="."]
visible = false
offset_left = 68.0
offset_top = 22.0
offset_right = 564.0
offset_bottom = 452.0
theme_override_styles/panel = SubResource("StyleBoxFlat_571n0")

[node name="Heading" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 186.0
offset_top = 4.0
offset_right = 314.0
offset_bottom = 56.0
theme_override_font_sizes/font_size = 32
text = "Register"

[node name="ErrorMessage" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 294.0
offset_right = 488.0
offset_bottom = 346.0
theme_override_colors/font_color = Color(1, 0.109804, 0.207843, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="RegisterClose" type="Button" parent="RegisterPanel"]
layout_mode = 0
offset_left = 436.0
offset_top = 6.0
offset_right = 484.0
offset_bottom = 62.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
text = "X"

[node name="UserNameLabel" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 72.0
offset_top = 78.0
offset_right = 232.0
offset_bottom = 130.0
theme_override_font_sizes/font_size = 32
text = "Username"

[node name="EmailLabel" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 146.0
offset_top = 132.0
offset_right = 232.0
offset_bottom = 184.0
theme_override_font_sizes/font_size = 32
text = "Email"

[node name="PasswordLabel" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 84.0
offset_top = 182.0
offset_right = 234.0
offset_bottom = 234.0
theme_override_font_sizes/font_size = 32
text = "Password
"

[node name="PasswordConfLabel" type="Label" parent="RegisterPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 234.0
offset_right = 232.0
offset_bottom = 286.0
theme_override_font_sizes/font_size = 32
text = "Password conf
"

[node name="UserNameText" type="LineEdit" parent="RegisterPanel"]
layout_mode = 0
offset_left = 264.0
offset_top = 84.0
offset_right = 458.0
offset_bottom = 124.0
theme_override_font_sizes/font_size = 16

[node name="EmailText" type="LineEdit" parent="RegisterPanel"]
layout_mode = 0
offset_left = 264.0
offset_top = 136.0
offset_right = 458.0
offset_bottom = 176.0
theme_override_font_sizes/font_size = 16

[node name="PasswordText" type="LineEdit" parent="RegisterPanel"]
layout_mode = 0
offset_left = 264.0
offset_top = 186.0
offset_right = 458.0
offset_bottom = 226.0
theme_override_font_sizes/font_size = 16
secret = true

[node name="PasswordConfText" type="LineEdit" parent="RegisterPanel"]
layout_mode = 0
offset_left = 264.0
offset_top = 238.0
offset_right = 458.0
offset_bottom = 278.0
theme_override_font_sizes/font_size = 16
secret = true

[node name="SaveRegistration" type="Button" parent="RegisterPanel"]
layout_mode = 0
offset_left = 180.0
offset_top = 352.0
offset_right = 336.0
offset_bottom = 414.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
theme_override_styles/pressed = ExtResource("3_wtpa1")
text = "Save"

[node name="LoginPanel" type="Panel" parent="."]
visible = false
offset_left = 68.0
offset_top = 28.0
offset_right = 564.0
offset_bottom = 434.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3q6i3")

[node name="Heading" type="Label" parent="LoginPanel"]
layout_mode = 0
offset_left = 206.0
offset_top = 8.0
offset_right = 290.0
offset_bottom = 60.0
theme_override_font_sizes/font_size = 32
text = "Login"

[node name="ErrorMessage" type="Label" parent="LoginPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 252.0
offset_right = 484.0
offset_bottom = 304.0
theme_override_colors/font_color = Color(1, 0, 0.392157, 1)
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="UserNameLabel" type="Label" parent="LoginPanel"]
layout_mode = 0
offset_left = 54.0
offset_top = 104.0
offset_right = 214.0
offset_bottom = 156.0
theme_override_font_sizes/font_size = 32
text = "Username"

[node name="PasswordLabel" type="Label" parent="LoginPanel"]
layout_mode = 0
offset_left = 54.0
offset_top = 188.0
offset_right = 214.0
offset_bottom = 240.0
theme_override_font_sizes/font_size = 32
text = "Password"

[node name="UserNameText" type="LineEdit" parent="LoginPanel"]
layout_mode = 0
offset_left = 260.0
offset_top = 102.0
offset_right = 452.0
offset_bottom = 154.0
theme_override_font_sizes/font_size = 26

[node name="PasswordText" type="LineEdit" parent="LoginPanel"]
layout_mode = 0
offset_left = 260.0
offset_top = 186.0
offset_right = 452.0
offset_bottom = 238.0
theme_override_font_sizes/font_size = 26
secret = true

[node name="LoginClose" type="Button" parent="LoginPanel"]
layout_mode = 0
offset_left = 432.0
offset_top = 8.0
offset_right = 484.0
offset_bottom = 64.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 28
text = "x"

[node name="UserLogin" type="Button" parent="LoginPanel"]
layout_mode = 0
offset_left = 174.0
offset_top = 316.0
offset_right = 328.0
offset_bottom = 378.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
theme_override_styles/pressed = ExtResource("3_wtpa1")
text = "Login"

[node name="CharacterSelect" type="Panel" parent="."]
visible = false
offset_right = 640.0
offset_bottom = 480.0
theme_override_styles/panel = SubResource("StyleBoxFlat_3q6i3")

[node name="Heading" type="Label" parent="CharacterSelect"]
layout_mode = 0
offset_left = 188.0
offset_top = -6.0
offset_right = 458.0
offset_bottom = 48.0
theme_override_font_sizes/font_size = 34
text = "Character Select"

[node name="Sprite2D" type="Sprite2D" parent="CharacterSelect"]
position = Vector2(314, 78)
scale = Vector2(2, 2)
texture = ExtResource("9_888ej")

[node name="LabelCharacterName" type="Label" parent="CharacterSelect"]
layout_mode = 0
offset_left = 40.0
offset_top = 108.0
offset_right = 604.0
offset_bottom = 160.0
theme_override_font_sizes/font_size = 32
text = "Name Text"
horizontal_alignment = 1

[node name="Label2CharacterDesc" type="Label" parent="CharacterSelect"]
layout_mode = 0
offset_left = 102.0
offset_top = 214.0
offset_right = 540.0
offset_bottom = 398.0
theme_override_font_sizes/font_size = 24
text = "Description Text"
autowrap_mode = 2

[node name="ButtonBack" type="Button" parent="CharacterSelect"]
layout_mode = 0
offset_left = 28.0
offset_top = 212.0
offset_right = 90.0
offset_bottom = 274.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
text = "<"

[node name="ButtonForward" type="Button" parent="CharacterSelect"]
layout_mode = 0
offset_left = 548.0
offset_top = 212.0
offset_right = 610.0
offset_bottom = 274.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
text = ">"

[node name="ButtonSelect" type="Button" parent="CharacterSelect"]
layout_mode = 0
offset_left = 24.0
offset_top = 406.0
offset_right = 600.0
offset_bottom = 468.0
mouse_default_cursor_shape = 2
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = ExtResource("3_wtpa1")
theme_override_styles/hover = ExtResource("4_jf74b")
text = "Select Male Reptiloid"

[node name="LabelCustomCharacterName" type="Label" parent="CharacterSelect"]
layout_mode = 0
offset_left = 8.0
offset_top = 154.0
offset_right = 270.0
offset_bottom = 206.0
theme_override_font_sizes/font_size = 32
text = "Custom Name:"

[node name="CustomCharacterNameText" type="LineEdit" parent="CharacterSelect"]
layout_mode = 0
offset_left = 284.0
offset_top = 156.0
offset_right = 634.0
offset_bottom = 208.0
theme_override_font_sizes/font_size = 24

[node name="HTTPLoginRequest" type="HTTPRequest" parent="."]

[node name="HTTPSignupRequest" type="HTTPRequest" parent="."]

[node name="HTTPSavePlayerRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="WaxLogin" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Login" to="." method="_on_login_pressed"]
[connection signal="pressed" from="Register" to="." method="_on_register_pressed"]
[connection signal="pressed" from="RegisterPanel/RegisterClose" to="." method="_on_register_close_pressed"]
[connection signal="pressed" from="RegisterPanel/SaveRegistration" to="." method="_on_save_registration_pressed"]
[connection signal="pressed" from="LoginPanel/LoginClose" to="." method="_on_login_close_pressed"]
[connection signal="pressed" from="LoginPanel/UserLogin" to="." method="_on_user_login_pressed"]
[connection signal="pressed" from="CharacterSelect/ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="CharacterSelect/ButtonForward" to="." method="_on_button_forward_pressed"]
[connection signal="pressed" from="CharacterSelect/ButtonSelect" to="." method="_on_button_select_pressed"]
[connection signal="request_completed" from="HTTPLoginRequest" to="." method="_on_http_login_request_request_completed"]
[connection signal="request_completed" from="HTTPSignupRequest" to="." method="_on_http_signup_request_request_completed"]
[connection signal="request_completed" from="HTTPSavePlayerRequest" to="." method="_on_http_save_player_request_request_completed"]
